...
        android:scaleType="fitCenter"
        android:src="@mipmap/profile_default_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/newComment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Comment "
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newCommentButton"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:text="Add "
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
...
