...
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_capture">Capture</string>
    <string name="title_activity_create">Create</string>

    <string name="profile_origin_id">profileFrag</string>
    <string name="home_origin_id">homeFrag</string>
    <string name="discover_origin_id">discoverFrag</string>
    <string name="post_detail_origin_id">postDetail</string>
    <string name="recipe_detail_origin_id">recipeDetail</string>
    <string name="create_comment_origin_id">createComment</string>
</resources>

