...
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:subtitleTextColor="@color/colorPrimary" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/homeTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:tabIndicatorColor="?android:attr/colorAccent"
            app:tabTextColor="?android:attr/colorAccent">

...
